src/test/ui/consts/const-eval/const-eval-overflow-4b.stderr
error[E0369]: cannot add `u8` to `i8`
  --> $DIR/const-eval-overflow-4b.rs:9:28
   |
LL |     : [u32; (i8::MAX as i8 + 1u8) as usize]
   |              ------------- ^ --- u8
   |              |
   |              i8
   |
help: change the type of the numeric literal from `u8` to `i8`
   |
LL |     : [u32; (i8::MAX as i8 + 1i8) as usize]
   |                               ~~

error[E0308]: mismatched types
  --> $DIR/const-eval-overflow-4b.rs:9:30
   |
LL |     : [u32; (i8::MAX as i8 + 1u8) as usize]
   |                              ^^^ expected `i8`, found `u8`

error[E0604]: only `u8` can be cast as `char`, not `i8`
  --> $DIR/const-eval-overflow-4b.rs:22:13
   |
LL |     : [u32; 5i8 as char as usize]
   |             ^^^^^^^^^^^ invalid cast

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0308, E0369, E0604.
For more information about an error, try `rustc --explain E0308`.
